unpackaged/main/default/objects/Account_Account_Relationship__c/Account_Account_Relationship__c.object-meta.xml
<CustomObject>
    <description>A relationship between two accounts, such as a Household and a Business account.</description>
    <label>Account Account Relationship</label>
    <nameField>
        <displayFormat>AAR-{0000}</displayFormat>
        <label>Account Account Relationship Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Account Relationshipa</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>