unpackaged/main/default/objects/Account_Account_Relationship__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Account Relationshipa</relationshipLabel>
    <relationshipName>Account_Account_Relationshipa</relationshipName>
    <type>Lookup</type>
</CustomField>