unpackaged/main/default/objects/Account_Account_Relationship__c/fields/Association_Type__c.field-meta.xml
<CustomField>
    <fullName>Association_Type__c</fullName>
    <label>Association Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Peer</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>