unpackaged/main/default/objects/Account_Account_Relationship__c/fields/Inverse_Reciprocal_Role__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Reciprocal_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Inverse reciprocal role for member account relationships on the map.</description>
    <label>Inverse Role</label>
    <referenceTo>Reciprocal_Role__c</referenceTo>
    <relationshipLabel>Account Account Relationshipa (Inverse Role)</relationshipLabel>
    <relationshipName>Account_Account_Relationshipa1</relationshipName>
    <type>Lookup</type>
</CustomField>