unpackaged/main/default/objects/Account_Account_Relationship__c/fields/Legacy_FSC_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_FSC_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Legacy FSC ID</label>
    <length>60</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>