unpackaged/main/default/objects/Account_Account_Relationship__c/fields/Reciprocal_Role__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to Reciprocal_Role__c for member account relationships on the map.</description>
    <label>Role</label>
    <referenceTo>Reciprocal_Role__c</referenceTo>
    <relationshipLabel>Account Account Relationshipa</relationshipLabel>
    <relationshipName>Account_Account_Relationshipa</relationshipName>
    <type>Lookup</type>
</CustomField>