unpackaged/main/default/objects/Account_Account_Relationship__c/fields/Related_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Account Relationship (Related Account)</relationshipLabel>
    <relationshipName>Account_Account_Relationship1</relationshipName>
    <type>Lookup</type>
</CustomField>