unpackaged/main/default/objects/Account_Account_Relationship__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Attorney</fullName>
            </value>
            <value>
                <fullName>Aunt / Uncle</fullName>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Client Entity</fullName>
            </value>
            <value>
                <fullName>CPA</fullName>
            </value>
            <value>
                <fullName>Employee</fullName>
            </value>
            <value>
                <fullName>Employer</fullName>
            </value>
            <value>
                <fullName>Ex-Spouse</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Grandchild</fullName>
            </value>
            <value>
                <fullName>Grandparent</fullName>
            </value>
            <value>
                <fullName>In-Law</fullName>
            </value>
            <value>
                <fullName>Life Partner</fullName>
            </value>
            <value>
                <fullName>Nephew</fullName>
            </value>
            <value>
                <fullName>Niece / Nephew</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Parent</fullName>
            </value>
            <value>
                <fullName>529 Beneficiary</fullName>
            </value>
            <value>
                <fullName>Account Beneficiary</fullName>
            </value>
            <value>
                <fullName>Authorized Person</fullName>
            </value>
            <value>
                <fullName>Beneficial Owner</fullName>
            </value>
            <value>
                <fullName>Control Person</fullName>
            </value>
            <value>
                <fullName>Custodian (Minor)</fullName>
            </value>
            <value>
                <fullName>Executor / Personal Representative</fullName>
            </value>
            <value>
                <fullName>Guardian / Conservator</fullName>
            </value>
            <value>
                <fullName>Plan Administrator</fullName>
            </value>
            <value>
                <fullName>Plan Participant</fullName>
            </value>
            <value>
                <fullName>Power of Attorney</fullName>
            </value>
            <value>
                <fullName>Trust Beneficiary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>