unpackaged/main/default/objects/Account_Account_Relationship__c/recordTypes/Business.recordType-meta.xml
<RecordType>
    <fullName>Business</fullName>
    <active>true</active>
    <label>Business</label>
</RecordType>