unpackaged/main/default/objects/Account_Account_Relationship__c/recordTypes/COI_Referral.recordType-meta.xml
<RecordType>
    <fullName>COI_Referral</fullName>
    <active>true</active>
    <label>COI / Referral</label>
</RecordType>