unpackaged/main/default/objects/Account_Account_Relationship__c/recordTypes/Fiduciary_Legal.recordType-meta.xml
<RecordType>
    <fullName>Fiduciary_Legal</fullName>
    <active>true</active>
    <label>Fiduciary / Regulatory</label>
</RecordType>