unpackaged/main/default/objects/Account_Account_Relationship__c/recordTypes/Other.recordType-meta.xml
<RecordType>
    <fullName>Other</fullName>
    <active>true</active>
    <label>Other</label>
</RecordType>