unpackaged/main/default/objects/Account_Account_Relationship__c/recordTypes/Personal_and_Family.recordType-meta.xml
<RecordType>
    <fullName>Personal_and_Family</fullName>
    <active>true</active>
    <label>Family and Friends</label>
</RecordType>